# backtesting_lib

./: .gitattributes  .gitignore  pyproject.toml  requirements.txt
backtesting/: core.py  data_validator.py  metrics.py  plotting.py  positions.py  utils.py
examples/: ETF_Bench.xlsx  getting_started.ipynb  order_book.xlsx  stockPrices.xlsx
tests/: test_utils.py
